--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,18 @@ dependencies:
     sdk: flutter
   flutter_date_picker_timeline: ^0.3.3
   gap: ^3.0.1
+  json_annotation: ^4.8.1
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.0.5
   intl: ^0.17.0
-  lottie: ^2.7.0
+  lottie: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
-  flutter_lints: ^2.0.0
+  json_serializable: ^6.7.1
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
